--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "foundation": "~5.5.1",
     "d3": "~3.5.5",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "angular-filter": "~0.5.4"
   }
 }
