--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "foundation": "~5.5.1",
     "d3": "~3.5.5",
     "angular": "~1.3.15",
-    "angular-filter": "~0.5.4"
+    "angular-filter": "~0.5.4",
+    "angular-cookies": "~1.3.15",
+    "angular-resource": "~1.3.15"
   }
 }
