--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "angular": "~1.3.15",
     "angular-filter": "~0.5.4",
     "angular-cookies": "~1.3.15",
-    "angular-resource": "~1.3.15"
+    "angular-resource": "~1.3.15",
+    "angular-ui-router": "~0.2.14",
+    "underscore": "~1.8.3"
   }
 }
